--- a/simpleTimer/css/style.css
+++ b/simpleTimer/css/style.css
@@ -68,6 +68,15 @@ header {
     .wrap .clock p {
       font-family: 'Courier New', Courier, monospace;
       text-shadow: 0 1px 2px 2px gray; }
+  .wrap .rest {
+    height: 50px;
+    width: 50%;
+    margin: 5% auto;
+    border-radius: 10%;
+    border-left: none;
+    border-right: none;
+    background-color: #a73d30;
+    color: whitesmoke; }
 
 .wrap.active {
   opacity: .9; }
