--- a/simpleTimer/scss/style.scss
+++ b/simpleTimer/scss/style.scss
@@ -59,7 +59,6 @@ header {
         border-right: none; 
         background-color: rgb(167, 61, 48);
         color: whitesmoke;
-
     }
     & input {
         width: 50%;
@@ -83,6 +82,16 @@ header {
             font-family: 'Courier New', Courier, monospace;
             text-shadow: 0 1px 2px 2px gray;
         }
+    }
+    & .rest {
+        height: 50px;
+        width: 50%;
+        margin: 5% auto;
+        border-radius: 10%;
+        border-left: none;
+        border-right: none; 
+        background-color: rgb(167, 61, 48);
+        color: whitesmoke;
     }
 }
 .wrap.active {
