--- a/simpleToDoList/css/style.css
+++ b/simpleToDoList/css/style.css
@@ -124,7 +124,7 @@
         pointer-events: none; }
     .wrap .list .ulList .fall {
       transform: translateY(10rem) rotateZ(20deg);
-      transition: all 1.2s ease;
+      transition: all .7s ease;
       opacity: 0; }
 
 /*# sourceMappingURL=style.css.map */
